# ESPNet-PoC

./: Dockerfile  README.md  convert_to_wav.py  main.py  pyproject.toml  requirements.txt  run_client.py  run_docker.sh  run_server.py  speaker_embeddings.pkl
backend/: app.py  pyproject.toml  run_server.py  speaker_embeddings.pkl
backend/src/: demo.py  realtime_speaker_recognition.py  speaker_recognition.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: MetaverseRoom.tsx  SpeakerPanel.tsx  SpeechBubble.tsx  VoiceRecorder.tsx
src/: demo.py  realtime_speaker_recognition.py  server_api.py  speaker_recognition.py  speaker_server.py
